tests/snapshots/eval__bracket_access_eval__index_on_int_is_type_error.snap
---
source: tests/eval.rs
expression: "run(\"print((1)[0])\")"
---
Err(
    EvalError {
        category: Type,
        message: "cannot index Int",
        span: Span {
            start: 6,
            end: 12,
        },
        cause: None,
    },
)
