tests/snapshots/eval__bracket_access_eval__index_on_string_is_type_error.snap
---
source: tests/eval.rs
expression: "run(r#\"print(\"hi\"[0])\"#)"
---
Err(
    EvalError {
        category: Type,
        message: "cannot index String",
        span: Span {
            start: 6,
            end: 13,
        },
        cause: None,
    },
)
