tests/snapshots/eval__bracket_access_eval__list_index_out_of_bounds.snap
---
source: tests/eval.rs
expression: "run(\"print([10, 20][5])\")"
---
Err(
    EvalError {
        category: Runtime,
        message: "list index 5 out of bounds (length 2)",
        span: Span {
            start: 6,
            end: 17,
        },
        cause: None,
    },
)
