tests/snapshots/eval__bracket_access_eval__list_index_string_is_type_error.snap
---
source: tests/eval.rs
expression: "run(r#\"print([10, 20][\"x\"])\"#)"
---
Err(
    EvalError {
        category: Type,
        message: "list index must be Int, got String",
        span: Span {
            start: 6,
            end: 19,
        },
        cause: None,
    },
)
