tests/snapshots/eval__bracket_access_eval__object_bracket_missing.snap
---
source: tests/eval.rs
expression: "run(r#\"print({}[\"nope\"])\"#)"
---
Err(
    EvalError {
        category: Name,
        message: "object has no key `nope`",
        span: Span {
            start: 6,
            end: 16,
        },
        cause: None,
    },
)
