tests/snapshots/eval__bracket_access_eval__object_bracket_string.snap
---
source: tests/eval.rs
expression: "run(r#\"print({name: \"Ana\"}[\"name\"])\"#)"
---
Ok(
    "Ana\n",
)
